--- a/templates/cat1/r5/_2.16.840.1.113883.10.20.24.3.38.cat1.erb
+++ b/templates/cat1/r5/_2.16.840.1.113883.10.20.24.3.38.cat1.erb
@@ -14,7 +14,7 @@
     <%== render(:partial => 'author_qdm', :locals => {:entry => entry}) %>
     <%== render(:partial => 'reason', :locals => {:entry => entry, :reason_oids=>field_oids["REASON"]}) %>
     <%if !entry.values.empty? %>
-      <%== render(:partial => 'results', :locals => {:entry => entry, :result_oids => result_oids, :value_set_oid => value_set_oid}) %>
+      <%== render(:partial => 'results_lab', :locals => {:entry => entry, :result_oids => result_oids, :value_set_oid => value_set_oid}) %>
     <% end %>
     <% if entry.components -%>
       <%== render(:partial => 'components', :locals => {:entry => entry} ) %>
